--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <hr>
 
 
-            <img src="/Projects/Website/images/Ad.png" alt="">
+            <img src="/images/Ad.png" alt="">
         </aside>
         <article>
             <h2>Welcome to our Website</h2>
