--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <hr>
 
 
-            <img src="/images/Ad.png" alt="">
+            <img src="images/Ad.png" alt="">
         </aside>
         <article>
             <h2>Welcome to our Website</h2>
@@ -61,14 +61,14 @@
             <div class="card-container">
 
                 <div class="card card1">
-                    <img src="/Projects/Website/images/banner1.png" alt="">
+                    <img src="images/banner1.png" alt="">
                     <h2>Web Designing</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magni non, voluptate officiis
                         inventore porro animi maxime, quisquam itaque quam culpa fugiat nihil!</p>
                     <button class="decorative-button">Show More</button>
                 </div>
                 <div class="card card2">
-                    <img src="/Projects/Website/images/banner2.png" alt="">
+                    <img src="images/banner2.png" alt="">
                     <h2>Web Development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
                         amet consectetur adipisicing elit.</p>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="card card3">
-                    <img src="/Projects/Website/images/banner3.png" alt="">
+                    <img src="images/banner3.png" alt="">
                     <h2>Mobile App Development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, Lorem ipsum dolor sit amet
                         consectetur adipisicing elit</p>
